--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -4,13 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 
-  font-family: Nunito Sans;
-  font-style: normal;
-  font-weight: normal;
   font-size: 48px;
   line-height: 65px;
   text-align: center;
@@ -23,7 +19,7 @@
   padding-right: 195px;
 }
 
-button {
+.LandingPage button {
   width: 353px;
   height: 75px;
   background: #ffcb05;
@@ -37,4 +33,9 @@ button {
 
 .viewPartners {
   width: 353px;
+}
+
+.viewPartners:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px rgba(21, 156, 228, 0.4);
 }
