--- a/src/PartnersPage.css
+++ b/src/PartnersPage.css
@@ -1,35 +1,64 @@
 .PartnersPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    width: 100%;
-    height: 100%;
-    background-color: #EDECEC;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #edecec;
+}
+
+.PartnersPage Button {
+  border: none;
+  cursor: pointer;
 }
 
 .PartnerComponent {
-    margin: 20px;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 800px;
-    background-color:white;
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 900px;
+  background-color: white;
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+}
+
+.PartnerInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: left;
+  vertical-align: text-top;
+  vertical-align: top;
+  width: 100%;
+  height: 200px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.PartnerInfo p {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .PartnerImage {
-    border-radius: 50%;
-    object-fit: cover;
-    width: 225px;
-    height: 225px;
+  border-radius: 50%;
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
 }
 
 .PartnerName {
-    font-size: larger;
+  font-family: "IBM Plex Sans Condensed";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  color: #00274c;
 }
 
-/* .imageDiv {
-    background-image: url("./images/ssd_photo.jpg");
-    background-image: 'url(' + require('./images/ssd_photo.jpg') + ')';
-} */
+.PartnerDescription {
+  font-family: "IBM Plex Sans Condensed";
+  font-style: normal;
+  font-size: 24px;
+}
