--- a/src/PartnersPage.css
+++ b/src/PartnersPage.css
@@ -145,3 +145,25 @@
   color: #ffffff;
   margin: 0px;
 }
+
+#PartnerSideViewWebsite {
+  width: 180px;
+  height: 80px;
+  background: #ffcb05;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #131516;
+  text-decoration: none;
+}
