Started the dyslexic and font size implementation (this is before updating elements on every single page

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
   width: 100%;
-  font-family: "OpenDyslexic2";
   font-style: normal;
   font-weight: normal;
 }
+
+/* .dyslexic {
+  font-family: "OpenDyslexic2";
+}
+
+.notDyslexic {
+  font-family: "Nunito Sans";
+} */
 
 #pageContent {
   width: 100%;
