--- a/src/Header.css
+++ b/src/Header.css
@@ -11,7 +11,7 @@
 }
 
 .Header button {
-  font-family: "Nunito Sans";
+  /* font-family: "Nunito Sans"; */
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
