--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,6 @@
   font-weight: normal;
 }
 
-/* .dyslexic {
-  font-family: "OpenDyslexic2";
-}
-
-.notDyslexic {
-  font-family: "Nunito Sans";
-} */
-
 #pageContent {
   width: 100%;
 }
@@ -61,6 +53,7 @@ a:focus {
 .accessibilityBtn {
   width: 221px;
   height: 171px;
+
   font-size: x-large;
 }
 
@@ -78,7 +71,7 @@ a:focus {
   font-size: x-large;
 }
 
-#showAccessBtn {
+#showAccessBtnLarge {
   position: fixed;
   width: 241px;
   height: 117px;
@@ -88,4 +81,39 @@ a:focus {
   right: 20px;
 
   font-size: x-large;
+}
+
+#showAccessBtnSmall {
+  position: fixed;
+  width: 120px;
+  height: 50px;
+
+  float: right;
+  bottom: 20px;
+  right: 20px;
+
+  font-size: medium;
+}
+
+#minimizeAccessButton {
+  position: fixed;
+  bottom: 101px;
+  right: 226px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 36px;
+  background: rgb(219, 217, 217);
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  /* border-radius: 40px; */
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 38px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #131516;
 }
