--- a/src/PartnersPage.css
+++ b/src/PartnersPage.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  flex: 1;
   background-color: #edecec;
 }
 
@@ -37,7 +36,6 @@
   vertical-align: text-top;
   vertical-align: top;
   width: 100%;
-  height: 220px;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -65,7 +63,8 @@
 }
 
 #PartnerSidePanel {
-  width: 900px;
+  flex: 0 auto;
+  width: 600px;
   background-color: #2f65a7;
   position: relative;
 }
