--- a/src/PartnersPage.css
+++ b/src/PartnersPage.css
@@ -1,14 +1,65 @@
 .PartnersPage {
   width: 100%;
   display: flex;
+  background-color: #edecec;
+}
+
+.PartnersPageContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  min-height: 100vh;
+}
+
+.SearchContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 900px;
+  margin-top: 20px;
+  height: 80px;
+}
+
+.SearchBarContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.SearchButton {
+  padding: 20px;
+  margin-right: 20px;
+  width: 150px;
+  min-width: 150px;
+  background-color: white;
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+}
+
+#SearchPartner {
+  height: 75.98px;
+  width: 600px;
+  padding-left: 10px;
+  border: none;
+}
+
+.SearchClose {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  background-color: white;
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+  margin-left: 20px;
+  border: none;
+
+  font-size: 36px;
 }
 
 .PartnersPageList {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
-  background-color: #edecec;
 }
 
 .PartnersPageList Button {
