--- a/src/JoinPage.css
+++ b/src/JoinPage.css
@@ -73,3 +73,9 @@
   outline: none;
   box-shadow: 0 0 0 5px rgba(21, 156, 228, 0.4);
 }
+
+.required-field::after {
+  content: "*";
+  color: red;
+  margin-left: 4px;
+}
