--- a/src/PartnersPage.css
+++ b/src/PartnersPage.css
@@ -200,6 +200,8 @@
   align-items: center;
   justify-content: center;
 
+  padding: 10px;
+  margin-top: 10px;
   font-style: normal;
   font-weight: 600;
   line-height: 33px;
